--- a/frontend/package.json
+++ b/frontend/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@material-ui/core": "^4.11.3",
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
@@ -10,6 +11,7 @@
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-scripts": "4.0.2",
+    "react-test-renderer": "^17.0.1",
     "styled-components": "5.2.1",
     "web-vitals": "^1.0.1"
   },
@@ -39,7 +41,12 @@
     ]
   },
   "devDependencies": {
-    "prettier": "2.2.1"
+    "@testing-library/dom": "^7.29.4",
+    "history": "^4.10.1",
+    "jest-styled-components": "^7.0.3",
+    "msw": "^0.26.2",
+    "prettier": "2.2.1",
+    "react-router-dom": "^5.2.0"
   },
   "proxy": "http://localhost:8080"
 }
